lib/dcimgui/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImGuiID;      
typedef struct ImGuiIO_t ImGuiIO;                                              
typedef struct ImGuiInputTextCallbackData_t ImGuiInputTextCallbackData;        
typedef struct ImGuiStyle_t ImGuiStyle;                                        
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef int ImGuiKey;             
typedef int ImGuiMouseSource;     
typedef int ImGuiCol;             
typedef int ImGuiMouseButton;     
typedef int ImGuiMouseCursor;     
typedef unsigned short ImWchar16;      
typedef void* (*ImGuiMemAllocFunc)(size_t sz, void* user_data);           
typedef void (*ImGuiMemFreeFunc)(void* ptr, void* user_data);             
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API bool             ImGui_IsMouseClicked(ImGuiMouseButton button);                                       
CIMGUI_API bool             ImGui_IsMouseClickedEx(ImGuiMouseButton button, bool repeat );          
CIMGUI_API bool             ImGui_IsMouseReleased(ImGuiMouseButton button);                                      
CIMGUI_API bool             ImGui_IsMouseDoubleClicked(ImGuiMouseButton button);                                 
CIMGUI_API bool             ImGui_IsMouseReleasedWithDelay(ImGuiMouseButton button, float delay);                
CIMGUI_API int              ImGui_GetMouseClickedCount(ImGuiMouseButton button);                                 
CIMGUI_API bool             ImGui_IsMouseHoveringRect(ImVec2 r_min, ImVec2 r_max);                               
CIMGUI_API bool             ImGui_IsMouseHoveringRectEx(ImVec2 r_min, ImVec2 r_max, bool clip );     
CIMGUI_API bool             ImGui_IsMousePosValid(const ImVec2* mouse_pos );                         
CIMGUI_API bool             ImGui_IsAnyMouseDown(void);                                                          
CIMGUI_API ImVec2           ImGui_GetMousePos(void);                                                             
CIMGUI_API ImVec2           ImGui_GetMousePosOnOpeningCurrentPopup(void);                                        
CIMGUI_API bool             ImGui_IsMouseDragging(ImGuiMouseButton button, float lock_threshold );  
CIMGUI_API ImVec2           ImGui_GetMouseDragDelta(ImGuiMouseButton button , float lock_threshold ); 
CIMGUI_API void             ImGui_ResetMouseDragDelta(void);                                                     
CIMGUI_API void             ImGui_ResetMouseDragDeltaEx(ImGuiMouseButton button );                      
CIMGUI_API ImGuiMouseCursor ImGui_GetMouseCursor(void);                                                          
CIMGUI_API void             ImGui_SetMouseCursor(ImGuiMouseCursor cursor_type);                                  
CIMGUI_API void             ImGui_SetNextFrameWantCaptureMouse(bool want_capture_mouse);                         
CIMGUI_API const char* ImGui_GetClipboardText(void);
CIMGUI_API void        ImGui_SetClipboardText(const char* text);
CIMGUI_API void        ImGui_LoadIniSettingsFromDisk(const char* ini_filename);                           
CIMGUI_API void        ImGui_LoadIniSettingsFromMemory(const char* ini_data, size_t ini_size );  
CIMGUI_API void        ImGui_SaveIniSettingsToDisk(const char* ini_filename);                             
CIMGUI_API const char* ImGui_SaveIniSettingsToMemory(size_t* out_ini_size );                  
CIMGUI_API void  ImGui_DebugTextEncoding(const char* text);
CIMGUI_API void  ImGui_DebugFlashStyleColor(ImGuiCol idx);
CIMGUI_API void  ImGui_DebugStartItemPicker(void);
CIMGUI_API bool  ImGui_DebugCheckVersionAndDataLayout(const char* version_str, size_t sz_io, size_t sz_style, size_t sz_vec2, size_t sz_vec4, size_t sz_drawvert, size_t sz_drawidx); 
CIMGUI_API void ImGui_DebugLogUnformatted(const char* text);                   
CIMGUI_API void  ImGui_SetAllocatorFunctions(ImGuiMemAllocFunc alloc_func, ImGuiMemFreeFunc free_func, void* user_data );
CIMGUI_API void  ImGui_GetAllocatorFunctions(ImGuiMemAllocFunc* p_alloc_func, ImGuiMemFreeFunc* p_free_func, void** p_user_data);
CIMGUI_API void* ImGui_MemAlloc(size_t size);
CIMGUI_API void  ImGui_MemFree(void* ptr);
CIMGUI_API void           ImGui_UpdatePlatformWindows(void);                          
CIMGUI_API void           ImGui_RenderPlatformWindowsDefault(void);                   
CIMGUI_API void           ImGui_RenderPlatformWindowsDefaultEx(void* platform_render_arg , void* renderer_render_arg ); 
CIMGUI_API void           ImGui_DestroyPlatformWindows(void);                         
CIMGUI_API ImGuiViewport* ImGui_FindViewportByID(ImGuiID viewport_id);                
CIMGUI_API ImGuiViewport* ImGui_FindViewportByPlatformHandle(void* platform_handle);  
CIMGUI_API void ImVector_Construct(void* vector);  
CIMGUI_API void ImVector_Destruct(void* vector);   
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowWorkAreaInsets(void (*getWindowWorkAreaInsetsFunc)(ImGuiViewport* vp, ImVec4* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowFramebufferScale(void (*getWindowFramebufferScaleFunc)(ImGuiViewport* vp, ImVec2* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowPos(void (*getWindowPosFunc)(ImGuiViewport* vp, ImVec2* result));    
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowSize(void (*getWindowSizeFunc)(ImGuiViewport* vp, ImVec2* result));  
CIMGUI_API void ImGuiStyle_ScaleAllSizes(ImGuiStyle* self, float scale_factor);  
CIMGUI_API void ImGuiIO_AddKeyEvent(ImGuiIO* self, ImGuiKey key, bool down);                                          
CIMGUI_API void ImGuiIO_AddKeyAnalogEvent(ImGuiIO* self, ImGuiKey key, bool down, float v);                           
CIMGUI_API void ImGuiIO_AddMousePosEvent(ImGuiIO* self, float x, float y);                                            
CIMGUI_API void ImGuiIO_AddMouseButtonEvent(ImGuiIO* self, int button, bool down);                                    
CIMGUI_API void ImGuiIO_AddMouseWheelEvent(ImGuiIO* self, float wheel_x, float wheel_y);                              
CIMGUI_API void ImGuiIO_AddMouseSourceEvent(ImGuiIO* self, ImGuiMouseSource source);                                  
CIMGUI_API void ImGuiIO_AddMouseViewportEvent(ImGuiIO* self, ImGuiID id);                                             
CIMGUI_API void ImGuiIO_AddFocusEvent(ImGuiIO* self, bool focused);                                                   
CIMGUI_API void ImGuiIO_AddInputCharacter(ImGuiIO* self, unsigned int c);                                             
CIMGUI_API void ImGuiIO_AddInputCharacterUTF16(ImGuiIO* self, ImWchar16 c);                                           
CIMGUI_API void ImGuiIO_AddInputCharactersUTF8(ImGuiIO* self, const char* str);                                       
CIMGUI_API void ImGuiIO_SetKeyEventNativeData(ImGuiIO* self, ImGuiKey key, int native_keycode, int native_scancode);  
CIMGUI_API void ImGuiIO_SetKeyEventNativeDataEx(ImGuiIO* self, ImGuiKey key, int native_keycode, int native_scancode, int native_legacy_index ); 
CIMGUI_API void ImGuiIO_SetAppAcceptingEvents(ImGuiIO* self, bool accepting_events);                                  
CIMGUI_API void ImGuiIO_ClearEventsQueue(ImGuiIO* self);                                                              
CIMGUI_API void ImGuiIO_ClearInputKeys(ImGuiIO* self);                                                                
CIMGUI_API void ImGuiIO_ClearInputMouse(ImGuiIO* self);                                                               
CIMGUI_API void ImGuiInputTextCallbackData_DeleteChars(ImGuiInputTextCallbackData* self, int pos, int bytes_count);
CIMGUI_API void ImGuiInputTextCallbackData_InsertChars(ImGuiInputTextCallbackData* self, int pos, const char* text, const char* text_end );
CIMGUI_API void ImGuiInputTextCallbackData_SelectAll(ImGuiInputTextCallbackData* self);
CIMGUI_API void ImGuiInputTextCallbackData_SetSelection(ImGuiInputTextCallbackData* self, int s, int e);
CIMGUI_API void ImGuiInputTextCallbackData_ClearSelection(ImGuiInputTextCallbackData* self);