src/imguics/DCImGui.cs

    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsMouseClickedEx(int button, [MarshalAs(UnmanagedType.I1)] bool repeat);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsMouseClicked(int button);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsMouseReleased(int button);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsMouseDoubleClicked(int button);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsMouseReleasedWithDelay(int button, float delay);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_GetMouseClickedCount(int button);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsMouseHoveringRectEx(ImVec2 r_min, ImVec2 r_max, [MarshalAs(UnmanagedType.I1)] bool clip);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsMouseHoveringRect(ImVec2 r_min, ImVec2 r_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsMousePosValid(System.IntPtr mouse_pos);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsAnyMouseDown();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetMousePos();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetMousePosOnOpeningCurrentPopup();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_IsMouseDragging(int button, float lock_threshold);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetMouseDragDelta(int button, float lock_threshold);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ResetMouseDragDeltaEx(int button);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ResetMouseDragDelta();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern int ImGui_GetMouseCursor();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetMouseCursor(int cursor_type);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextFrameWantCaptureMouse([MarshalAs(UnmanagedType.I1)] bool want_capture_mouse);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetClipboardText();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetClipboardText([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_LoadIniSettingsFromDisk([MarshalAs(UnmanagedType.LPUTF8Str)] string ini_filename);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_LoadIniSettingsFromMemory([MarshalAs(UnmanagedType.LPUTF8Str)] string ini_data, System.IntPtr ini_size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SaveIniSettingsToDisk([MarshalAs(UnmanagedType.LPUTF8Str)] string ini_filename);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_SaveIniSettingsToMemory(System.IntPtr out_ini_size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_DebugTextEncoding([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_DebugFlashStyleColor(int idx);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_DebugStartItemPicker();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_DebugCheckVersionAndDataLayout([MarshalAs(UnmanagedType.LPUTF8Str)] string version_str, System.IntPtr sz_io, System.IntPtr sz_style, System.IntPtr sz_vec2, System.IntPtr sz_vec4, System.IntPtr sz_drawvert, System.IntPtr sz_drawidx);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_DebugLogUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetAllocatorFunctions(System.IntPtr alloc_func, System.IntPtr free_func, System.IntPtr user_data);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_GetAllocatorFunctions(System.IntPtr p_alloc_func, System.IntPtr p_free_func, System.IntPtr p_user_data);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_MemAlloc(System.IntPtr size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_MemFree(System.IntPtr ptr);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_UpdatePlatformWindows();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_RenderPlatformWindowsDefaultEx(System.IntPtr platform_render_arg, System.IntPtr renderer_render_arg);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_RenderPlatformWindowsDefault();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_DestroyPlatformWindows();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_FindViewportByID(uint viewport_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_FindViewportByPlatformHandle(System.IntPtr platform_handle);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImVector_Construct(System.IntPtr vector);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImVector_Destruct(System.IntPtr vector);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiPlatformIO_SetPlatform_GetWindowWorkAreaInsets(System.IntPtr getWindowWorkAreaInsetsFunc);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiPlatformIO_SetPlatform_GetWindowFramebufferScale(System.IntPtr getWindowFramebufferScaleFunc);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiPlatformIO_SetPlatform_GetWindowPos(System.IntPtr getWindowPosFunc);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiPlatformIO_SetPlatform_GetWindowSize(System.IntPtr getWindowSizeFunc);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiStyle_ScaleAllSizes(System.IntPtr self, float scale_factor);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddKeyEvent(System.IntPtr self, int key, [MarshalAs(UnmanagedType.I1)] bool down);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddKeyAnalogEvent(System.IntPtr self, int key, [MarshalAs(UnmanagedType.I1)] bool down, float v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddMousePosEvent(System.IntPtr self, float x, float y);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddMouseButtonEvent(System.IntPtr self, int button, [MarshalAs(UnmanagedType.I1)] bool down);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddMouseWheelEvent(System.IntPtr self, float wheel_x, float wheel_y);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddMouseSourceEvent(System.IntPtr self, int source);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddMouseViewportEvent(System.IntPtr self, uint id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddFocusEvent(System.IntPtr self, [MarshalAs(UnmanagedType.I1)] bool focused);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddInputCharacter(System.IntPtr self, uint c);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddInputCharacterUTF16(System.IntPtr self, ushort c);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_AddInputCharactersUTF8(System.IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string str);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_SetKeyEventNativeDataEx(System.IntPtr self, int key, int native_keycode, int native_scancode, int native_legacy_index);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_SetKeyEventNativeData(System.IntPtr self, int key, int native_keycode, int native_scancode);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_SetAppAcceptingEvents(System.IntPtr self, [MarshalAs(UnmanagedType.I1)] bool accepting_events);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_ClearEventsQueue(System.IntPtr self);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_ClearInputKeys(System.IntPtr self);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiIO_ClearInputMouse(System.IntPtr self);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiInputTextCallbackData_DeleteChars(System.IntPtr self, int pos, int bytes_count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiInputTextCallbackData_InsertChars(System.IntPtr self, int pos, [MarshalAs(UnmanagedType.LPUTF8Str)] string text, [MarshalAs(UnmanagedType.LPUTF8Str)] string text_end);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiInputTextCallbackData_SelectAll(System.IntPtr self);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiInputTextCallbackData_SetSelection(System.IntPtr self, int s, int e);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGuiInputTextCallbackData_ClearSelection(System.IntPtr self);
